Overview of changes from 0.6.1 to 0.7.0
==

* New features

  - "internal definitions" and "strict toplevel definitions validation"
    features have been configurable

  - Add optional duplicate variable check to 'let', 'let*', 'letrec' and 'do'
    (it is not required by R5RS)

* Specification changes

  - [R5RS] Remove 'delay' and 'force' (temporarily) since they are completely
    broken

  - [R5RS] Proper tail recursion conformance of 'eval' has been marked as
    'uncertain'

  - [SRFI-23] Display error message and optional objects as same as the
    reference implementation of SRFI-23

  - [SRFI-34] Add 'current handler' to error object to behave as same as the
    reference implementation of SRFI-34 'raise'

  - Definition of dotted list length is changed to SRFI-1's from
    SigScheme-speciific one. SCM_LISTLEN_DOTTED(), SCM_DOTTED_LISTP() and other
    dotted list-related macros and functions have been changed so

  - Remove initial hyphen support for symbols (such as '-sym). Use
    (string->symbol "-sym") instead

  - (scm_set_lib_path): Change to holding copied library path string

  - (scm_return_value): Removed

  - Change the low-level port API to fix the design error about error handling
    (get_byte() and peek_byte() were not able to detect read error)

* Fixes

  - Fix potential SEGV on long string parsing

  - Fix possible crash on parsing R5RS-reserved chars |[]{}

  - Fix broken GC on systems that have 8-byte aligned malloc(3) such as Cygwin

  - Fix possible crash on parsing script prelude longer than 64 chars

  - Fix possible crash on parsing script prelude that only has
    "#! /usr/bin/env"

  - Fix a broken error handling on character encoding switching when
    !SCM_USE_MULTIBYTE_CHAR

  - Fix infinite loop on raising error objects that contain circular list when
    SCM_USE_HYGIENIC_MACRO

  - [R5RS] Fix invalid acceptance of definition form on where neither toplevel
    nor internal definition is allowed
